--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,20 +14,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          cache: pip
-          python-version: 3.11
-      - name: Setup Poetry
-        uses: Gr1N/setup-poetry@v9
+          version: "0.7.3"
 
       - name: Check version consistency
         run: |
-          [[ "$(poetry version -s)" == "$(git describe --tags)" ]]
+          [[ "$(uv version --short)" == "$(git describe --tags)" ]]
 
       - name: Build project
-        run: poetry build
+        run: uv build
 
       - name: Create release
         uses: ncipollo/release-action@v1
