--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,26 @@
-[tool.poetry]
+[project]
 name = "acrm"
 version = "0.1.1"
 description = "An Arch Linux custom repository manager"
-authors = ["misitru <dev@mistiru.me>"]
+authors = [
+    {name = "mistiru", email = "dev@mistiru.me"},
+]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/mistiru/acrm"
+requires-python = ">=3.11"
+dependencies = [
+    "cleo~=2.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-cleo = "^2.0.0"
+[project.urls]
+source = "https://github.com/mistiru/acrm"
 
-[tool.poetry.scripts]
+[project.scripts]
 acrm = 'acrm.application:main'
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+#[tool.setuptools]
+#packages = ["acrm"]
