--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,19 @@ name = "acrm"
 version = "0.1.2"
 description = "An Arch Linux custom repository manager"
 authors = [
-    {name = "mistiru", email = "dev@mistiru.me"},
+    { name = "mistiru", email = "dev@mistiru.me" },
 ]
 license = "MIT"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "cleo~=2.0",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 [project.urls]
